exports[`base rendering tests renders correctly App with default Styled 1`] = `
<div
  className="div-9-0-9">
  <header
    className="header-10-0-10">
    <h1
      className="h1-13-0-11">
      Title
    </h1>
  </header>
  <section
    className="section-11-0-12"
    data-name="content">
    <button
      className="button-14-0-13 button-15-0-14">
      primitive test
    </button>
    <button
      className="button-14-0-13 button-16-0-15">
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-12-0-16">
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with default styled 1`] = `
<div
  className="div-1-0-0">
  <header
    className="header-2-0-1">
    <h1
      className="h1-5-0-2">
      Title
    </h1>
  </header>
  <section
    className="section-3-0-3"
    data-name="content">
    <button
      className="button-6-0-4 button-7-0-5">
      primitive test
    </button>
    <button
      className="button-6-0-4 button-8-0-6">
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-4-0-7">
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with injectStyled 1`] = `
<div
  className="root-0-17">
  <div
    className="div-17-0-19">
    <header
      className="header-18-0-20">
      <h1
        className="h1-21-0-21">
        Title
      </h1>
    </header>
    <section
      className="section-19-0-22"
      data-name="content">
      <button
        className="button-22-0-23 button-23-0-24">
        primitive test
      </button>
      <button
        className="button-22-0-23 button-24-0-25">
        dynamic primitive test
      </button>
    </section>
    <section
      className="section-20-0-26">
      Another section
    </section>
  </div>
</div>
`;
